[package]
name = "libsync"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library containing channels and other synchronisation object implementations."
repository = "https://github.com/coruscateor/libsync"
homepage = "https://coruscateor.com/projects/libsync"
keywords = ["synchronisation", "synchronization", "async", "channel", "channels"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", optional = true }
tokio = { version = "1.44.2", features = ["sync", "time"], optional = true } #, "macros" "rt", "rt-multi-thread", 
#delegate = "0.*"
delegate = "0.13.3"
futures = "0.3.31"
#rand = { version = "0.8.*", features = ["std", "std_rng"] }

#parking_lot = "0.12.*"

paste = "1.0.15"

accessorise = "0.2.0"

inc_dec = "0.1.0"

scc = { version = "3.4.2", optional = true }

#https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies

[features]
std = []
#count_waiting_senders_and_receivers = []
#crossbeam = ["dep:crossbeam"]
#tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
